# itd-oauth-sdk

./: .gitignore  README.md  pyproject.toml
itd_oauth/: __init__.py  api.py  client.py  exceptions.py  utils.py
