[project]
name = "itd-oauth-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.34.2",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.137.1",
    "uvicorn>=0.49.0",
]
itd-sdk = [
    "itd-sdk>=2.5.1",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.2.2",
]
